Travis not working - use a DB that exists?

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ services: mysql
 
 before_script:
   - mysql -e 'create database myapp_test;'
-  - cp  app/config/parameters.yml.dist  app/config/parameters.yml
+  - cp  .travis.parameters_test.mysql.yml  app/config/parameters.yml
   - cp  .travis.parameters_test.mysql.yml  app/config/parameters_test.yml
   - cp  app/phpunit.xml.dist  app/phpunit.xml
   - composer install --dev --no-interaction
