--- a/src/CaseStoreBundle/Resources/config/routing.yml
+++ b/src/CaseStoreBundle/Resources/config/routing.yml
@@ -17,6 +17,11 @@ case_store_project_case_study_field_definitions:
     path:     /project/{projectId}/casestudyfielddefinitions
     defaults: { _controller: CaseStoreBundle:Project:caseStudyFieldDefinitions }
 
+case_store_project_map:
+    path:     /project/{projectId}/map
+    defaults: { _controller: CaseStoreBundle:Project:map }
+
+
 case_store_project_case_studies:
     path:     /project/{projectId}/casestudies
     defaults: { _controller: CaseStoreBundle:Project:caseStudies }
