--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -8,6 +8,7 @@
          bootstrap="autoload.php"
 >
     <php>
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak"/>
         <ini name="error_reporting" value="-1" />
     </php>
 
