--- a/src/CaseStoreBundle/Resources/config/routing.yml
+++ b/src/CaseStoreBundle/Resources/config/routing.yml
@@ -1,3 +1,5 @@
+################################################### Home
+
 case_store_homepage:
     path:     /
     defaults: { _controller: CaseStoreBundle:Default:index }
@@ -7,20 +9,12 @@ case_store_newproject:
     path:     /newproject
     defaults: { _controller: CaseStoreBundle:ProjectNew:index }
 
+################################################### Project
 
 case_store_project:
     path:     /project/{projectId}
     defaults: { _controller: CaseStoreBundle:Project:index }
 
-
-case_store_project_admin:
-    path:     /project/{projectId}/admin
-    defaults: { _controller: CaseStoreBundle:ProjectAdmin:index }
-
-
-case_store_project_admin_case_study_field_definitions:
-    path:     /project/{projectId}/admin/casestudyfielddefinitions
-    defaults: { _controller: CaseStoreBundle:ProjectAdmin:caseStudyFieldDefinitions }
 
 case_store_project_map:
     path:     /project/{projectId}/map
@@ -48,39 +42,16 @@ case_store_new_case_study:
     path:     /project/{projectId}/newcasestudy
     defaults: { _controller: CaseStoreBundle:CaseStudyNew:index }
 
+################################################### Project Admin
 
-case_store_case_study:
-    path:     /project/{projectId}/casestudy/{caseStudyId}
-    defaults: { _controller: CaseStoreBundle:CaseStudy:index }
-
-
-
-
-case_store_case_study_document_download:
-    path:     /project/{projectId}/casestudy/{caseStudyId}/document/{documentId}
-    defaults: { _controller: CaseStoreBundle:CaseStudy:documentDownload }
+case_store_project_admin:
+    path:     /project/{projectId}/admin
+    defaults: { _controller: CaseStoreBundle:ProjectAdmin:index }
 
 
-case_store_case_study_edit_users:
-    path:     /project/{projectId}/casestudy/{caseStudyId}/edit/users
-    defaults: { _controller: CaseStoreBundle:CaseStudyEdit:editUsers }
-
-case_store_case_study_edit_locations:
-    path:     /project/{projectId}/casestudy/{caseStudyId}/edit/locations
-    defaults: { _controller: CaseStoreBundle:CaseStudyEdit:editLocations }
-
-case_store_case_study_edit_field:
-    path:     /project/{projectId}/casestudy/{caseStudyId}/edit/field/{fieldDefinitionId}
-    defaults: { _controller: CaseStoreBundle:CaseStudyEdit:editField }
-
-case_store_case_study_new_comment:
-    path:     /project/{projectId}/casestudy/{caseStudyId}/newcomment
-    defaults: { _controller: CaseStoreBundle:CaseStudy:newComment }
-
-case_store_case_study_new_document:
-    path:     /project/{projectId}/casestudy/{caseStudyId}/newdocument
-    defaults: { _controller: CaseStoreBundle:CaseStudyEdit:newDocument }
-
+case_store_project_admin_case_study_field_definitions:
+    path:     /project/{projectId}/admin/casestudyfielddefinitions
+    defaults: { _controller: CaseStoreBundle:ProjectAdmin:caseStudyFieldDefinitions }
 
 case_store_project_admin_new_case_study_field_definition:
     path:     /project/{projectId}/admin/newcasestudyfielddefinition
@@ -94,6 +65,42 @@ case_store_project_admin_case_study_field_definition:
 case_store_project_admin_case_study_field_definition_new_option:
     path:     /project/{projectId}/admin/casestudyfielddefinition/{caseStudyFieldDefinitionId}/newoption
     defaults: { _controller: CaseStoreBundle:ProjectAdminCaseStudyFieldDefinition:newOption }
+
+################################################### Case Study
+
+case_store_case_study:
+    path:     /project/{projectId}/casestudy/{caseStudyId}
+    defaults: { _controller: CaseStoreBundle:CaseStudy:index }
+
+case_store_case_study_document_download:
+    path:     /project/{projectId}/casestudy/{caseStudyId}/document/{documentId}
+    defaults: { _controller: CaseStoreBundle:CaseStudy:documentDownload }
+
+################################################### Case Study - Edit Project
+
+case_store_case_study_new_comment:
+    path:     /project/{projectId}/casestudy/{caseStudyId}/newcomment
+    defaults: { _controller: CaseStoreBundle:CaseStudy:newComment }
+
+################################################### Case Study  - Edit Case Study
+
+case_store_case_study_edit_users:
+    path:     /project/{projectId}/casestudy/{caseStudyId}/edit/users
+    defaults: { _controller: CaseStoreBundle:CaseStudyEdit:editUsers }
+
+case_store_case_study_edit_locations:
+    path:     /project/{projectId}/casestudy/{caseStudyId}/edit/locations
+    defaults: { _controller: CaseStoreBundle:CaseStudyEdit:editLocations }
+
+case_store_case_study_edit_field:
+    path:     /project/{projectId}/casestudy/{caseStudyId}/edit/field/{fieldDefinitionId}
+    defaults: { _controller: CaseStoreBundle:CaseStudyEdit:editField }
+
+case_store_case_study_new_document:
+    path:     /project/{projectId}/casestudy/{caseStudyId}/newdocument
+    defaults: { _controller: CaseStoreBundle:CaseStudyEdit:newDocument }
+
+################################################### User Account
 
 case_store_you:
     pattern:  /you
