Page to view output closes https://github.com/CaseStore/CaseStore-Core/issues/25

--- a/src/CaseStoreBundle/Resources/config/services.yml
+++ b/src/CaseStoreBundle/Resources/config/services.yml
@@ -18,6 +18,13 @@ services:
         # small performance boost
         public: false
 
+    app.output_voter:
+        class: CaseStoreBundle\Security\OutputVoter
+        tags:
+            - { name: security.voter }
+        # small performance boost
+        public: false
+
     pre_persist.listener:
         class: CaseStoreBundle\EventListener\PrePersistEventListener
         tags:
