--- a/src/CaseStoreBundle/Resources/config/routing.yml
+++ b/src/CaseStoreBundle/Resources/config/routing.yml
@@ -38,6 +38,12 @@ case_store_project_case_study_select_field_option:
     defaults: { _controller: CaseStoreBundle:ProjectCaseStudyField:selectFieldOption }
 
 
+case_store_project_outputs:
+    path:     /project/{projectId}/outputs
+    defaults: { _controller: CaseStoreBundle:Project:outputs }
+
+
+
 case_store_new_case_study:
     path:     /project/{projectId}/newcasestudy
     defaults: { _controller: CaseStoreBundle:CaseStudyNew:index }
