--- a/src/CaseStoreBundle/Resources/config/services.yml
+++ b/src/CaseStoreBundle/Resources/config/services.yml
@@ -13,6 +13,7 @@ services:
 
     app.case_study_voter:
         class: CaseStoreBundle\Security\CaseStudyVoter
+        arguments: [ @doctrine.orm.entity_manager ]
         tags:
             - { name: security.voter }
         # small performance boost
