--- a/src/CaseStoreCaseStudyFieldTypeIntegerBundle/Resources/config/services.yml
+++ b/src/CaseStoreCaseStudyFieldTypeIntegerBundle/Resources/config/services.yml
@@ -1,4 +1,6 @@
 services:
-#    case_store_case_study_field_type_integer.example:
-#        class: CaseStoreCaseStudyFieldTypeIntegerBundle\Example
-#        arguments: ["@service_id", "plain_value", %parameter%]
+    case_store_case_study_field_type_integer.type:
+        class: CaseStoreCaseStudyFieldTypeIntegerBundle\Service\CaseStoreFieldTypeIntegerService
+        arguments: ["@service_container"]
+        tags:
+          -  { name: case_study_field_type.definition }
