--- a/src/CaseStoreCaseStudyFieldTypeStringBundle/Resources/config/services.yml
+++ b/src/CaseStoreCaseStudyFieldTypeStringBundle/Resources/config/services.yml
@@ -1,4 +1,6 @@
 services:
-#    case_store_case_study_field_type_string.example:
-#        class: CaseStoreCaseStudyFieldTypeStringBundle\Example
-#        arguments: ["@service_id", "plain_value", %parameter%]
+    case_store_case_study_field_type_string.type:
+        class: CaseStoreCaseStudyFieldTypeStringBundle\Service\CaseStoreFieldTypeStringService
+        arguments: ["@service_container"]
+        tags:
+          -  { name: case_study_field_type.definition }
