--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "twitter/bootstrap": "3.3.*",
         "components/jquery": "2.1.*",
         "friendsofsymfony/user-bundle": "2.0.0-alpha3",
-        "doctrine/doctrine-migrations-bundle": "1.1.*"
+        "doctrine/doctrine-migrations-bundle": "1.1.*",
+        "jmbtechnologylimited/osdata": "1.0.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
