--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/assetic-bundle": "~2.3",
         "twitter/bootstrap": "3.3.*",
         "components/jquery": "2.1.*",
+        "twig/extensions": "1.3.*",
         "friendsofsymfony/user-bundle": "2.0.0-alpha3",
         "doctrine/doctrine-migrations-bundle": "1.1.*",
         "jmbtechnologylimited/osdata": "1.0.*"
